# Churn-Prediction-AWS-Lambda-Deployment

./: LICENSE  README.md  main.py
01-EDA/: EDA.ipynb
02-Deployment_FAST-API/: deployment.ipynb
02-train/: train.ipynb
03-Deployment_FAST-API/: Dockerfile  deployment.ipynb  deployment.py  pyproject.toml  test.py
04-Deployment_AWS-Lambda/: Dockerfile  lambda_function.py  main.py  pyproject.toml  test.py
