[project]
name = "churn-prediction-aws-lambda-deployment"
version = "0.1.0"
description = "Churn prediction service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
